2005-12-01 11:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridRenumber) to simplfy logic around renumber
	of nodeGlobal and part, removed nested if-then.
	* src/grid.c (gridPack,gridRenumber,gridAddNodeWithGlobal) to
	handle child_reference consistantly with other node based data
	if allocated ( != NULL ),

2005-12-01 10:33 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImport,gridFree) added child_reference to grid
	struct. test if map is null before free.
	* src/grid.c (gridCacheCurrentGridAndMap) free map and setup
	child_reference to nearby cell.

2005-11-29 19:23 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridDup) constructed from gridCacheCurrentGridAndMap
	to create a duplicate grid.
	* src/grid.c (gridCacheCurrentGridAndMap) refactored to call gridDup.

2005-11-22 22:57 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImport,gridFree) initialize parent and child to
	NULL and free.
	* src/grid.c (gridCacheCurrentGridAndMap) started (not complete)
	method to save off current grid and matric.

2005-11-22 22:55 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.9 Release. ** internal release ** Tagging to start
	work on a keeping original mesh around to interpolate metric.

2005-11-22 10:25 Mike Park  <mike.park@nasa.gov>

	* src/px_main.c (main) Only optimize volume for all orders to have
	consistant grids for convergence studies.
	* src/px_main.c (gridDumpBentEdgesForPX) to allow geometry up to
	and including 5th order.

2005-11-21 19:47 Mike Park  <mike.park@nasa.gov>

	* src/px_main.c (main) added new command line argument -q to set
	the geometry order. Only optimize volume if order > 2.
	* src/px_main.c (gridDumpBentEdgesForPX) to allow geometry up to
	and including 4th order.

2005-11-20 20:30 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: added a final sweep to remove
	unused nodes at any cost and untangle.

2005-11-18  9:04 Mike Park  <mike.park@nasa.gov>
